# seir

./: .gitignore  2702high.ods  2702less.ods  bounding series.nb  comparison.ods  determ.ods  model.lyx  newbig.odg  newfile1.lyx~  readme.md  s2alpha.ods  s2v.ods
input/: .~lock.cz.csv#  1104.csv  21.csv  84.csv  cz.csv  cza.csv  epi.csv  epi10.csv  epi12.csv  epi21.csv  epi42.csv  epi65.csv  epi65next.csv  epi8.csv  epihigh.csv  epimiddle.csv  epinovac.csv  epivlada.csv  epivladaopt.csv  epivladapes.csv  europe.py  ucilllllock.csv  ucinovaclock.csv
paper/: D.eps  a1.eps  a7.eps  ar.eps  big.eps  big.odg  d7.eps  inputs.ods  model.lyx  model.tex  s1.eps  schema.eps  schoma.odg  simple-eps.tif  simple.eps  simple.odg  utiarr.cls  vaccination.ods  vyslcejor.ods
seirwork/: .~lock.mzcr.ods#  .~lock.result1.ods#  .~lock.result4.ods#  .~lock.seir.ods#  .~lock.src.ods#  .~lock.vysl.ods#  alymprate0.48.ods  freealymprate.ods  rates.ods  result.ods  result1.ods  result4.ods  result47.ods  resultcomp.ods  seir.ods  seirresult.ods  src.ods  srcold.ods  v3.ods  vysl.ods
src/: CMakeLists.txt  cctools.hpp  cohortseir.hpp  complexest.hpp  countries.csv  covid.cpp  districts.hpp  emodel.hpp  epp.hpp  estimableseirfilter.hpp  functions.hpp  hfourseir.hpp  hseir.hpp  hsingleseir.hpp  light.cpp  litecfs.ods  lseir.hpp  main (copy).cpp  main.cpp  mixmatrix.ods  new.cpp  old.cpp  rates.cpp  seir.hpp  seirfilter.hpp
src/litecalibration/: litecfs.ods  qqplots.inp
theory/: censoredexp.nb  chart.odg
trash/: mode_w_clinl.lyx  model.lyx  newfile1.lyx
vacscen/: s2alpha.ods
(+78 files in other folders)
